<resources>

    <string name="app_name">Anthrax Flasher</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_anthrax_flasher">AnthraxFlasher</string>
    <string name="cpu0min">CPU: MIN CPU CLOCK</string>
    <string name="cpu0min192">192 MHz - HTC Default on OLD kernels</string>
    <string name="cpu0min384">384 MHz - Anthrax Recommended, HTC Default on NEW kernels</string>
    <string name="cpu0min432">432 MHz</string>
    <string name="cpu0max">CPU: MAX CPU CLOCK</string>
    <string name="cpuScrOff">CPU: MAX SCREEN OFF CLOCK</string>
    <string name="cpuScrOffGov">CPU: SCREEN ON GOVERNOR</string>
    <string name="io">I/O: SCHEDULER</string>
    <string name="gpu3d">GPU: 3D MAX CLOCK</string>
    <string name="gpu2d">GPU: 2D MAX CLOCK</string>
    <string name="s2w">SWEEP2WAKE: Settings</string>
    <string name="s2wStart">Default Sweep2Wake Start Point</string>
    <string name="s2wEnd">Default Sweep2Wake End Point</string>
    <string name="vsync">INIT.D: PANEL: VSYNC</string>
    <string name="mpdec">INIT.D: kernel based MPDECISION</string>
    <string name="reboot">Reboot after installation?</string>
    <string name="select_kernel">Select Kernel File*</string>
    <string name="setup_kernel">Setup Kernel</string>
    <string name="flash_kernel">Flash Kernel</string>
    <string name="select_kernel_exp">*Zip archive containing 2 folders. /modules, containing kernel modules and /kernel, containing zImage</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="kernel_file">Kernel File:</string>

</resources>